--- a/templates/reporte_5.html
+++ b/templates/reporte_5.html
@@ -17,9 +17,9 @@
     <table class="table table-bordered table-hover">
         <thead>
             <tr class="table-primary">
-                <th scope="col">Animal</th>
-                <th scope="col">Especie</th>
-                <th scope="col">Cantidad requerida</th>
+                <th scope="col">Codigo Animal</th>
+                <th scope="col">Codigo Dieta</th>
+                <th scope="col">Tipo animal</th>
             </tr>
         </thead>
         <tbody>
