--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,21 @@
 {% extends "layout.html" %}
 
 {% block body %}
-
-<div class="container" style="margin-top: 40px;">
-  <div class="row">
-    <div class="col-md-6">
-      <div class="card border-primary mb-3">
-        <div class="card-header bg-primary text-white">Tablas</div>
-        <div class="card-body">
-          <p class="card-text">Selecciona una tabla para gestionar su información.</p>
-          <a href="/inicio" class="btn btn-outline-primary">Ir a Tablas</a>
-        </div>
-      </div>
+<div class="split left">
+    <div class="centered">
+        <i class="fas fa-table fa-3x"></i>
+        <h2>Tablas</h2>
+        <p>Selecciona una tabla para gestionar su información.</p>
+        <a href="/inicio" class="btn">Ir a Tablas</a>
     </div>
-    <div class="col-md-6">
-      <div class="card border-secondary mb-3">
-        <div class="card-header bg-secondary text-white">Reportes</div>
-        <div class="card-body">
-          <p class="card-text">Accede a los reportes generados por la aplicación.</p>
-          <a href="/reportes" class="btn btn-outline-secondary">Ir a Reportes</a>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 
+<div class="split right">
+    <div class="centered">
+        <i class="fas fa-chart-bar fa-3x"></i>
+        <h2>Reportes</h2>
+        <p>Accede a los reportes generados por la aplicación.</p>
+        <a href="/reportes" class="btn">Ir a Reportes</a>
+    </div>
+</div>
 {% endblock %}
