--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -10,7 +10,7 @@
         <div class="card-body">
           <h4 class="card-title">Tabla Animal</h4>
           <p class="card-text">Aquí podrás ver, añadir, editar y eliminar información de la tabla de animales</p>
-          <a href="/animal" class="btn btn-outline-primary">Ir a Animal</a>
+          <a href="/animal" class="btn btn-secondary btn-outline-primary">Ir a Animal</a>
         </div>
       </div>
     </div>
@@ -20,7 +20,7 @@
         <div class="card-body">
           <h4 class="card-title">Tabla Nutriente</h4>
           <p class="card-text">Aquí podrás ver, añadir, editar y eliminar información de la tabla de nutrientes</p>
-          <a href="/nutriente" class="btn btn-outline-secondary">Ir a Nutriente</a>
+          <a href="/nutriente" class="btn btn-secondary btn-outline-secondary">Ir a Nutriente</a>
         </div>
       </div>
     </div>
@@ -30,7 +30,7 @@
         <div class="card-body">
           <h4 class="card-title">Tabla Animal_Nutriente</h4>
           <p class="card-text">Aquí podrás ver, añadir, editar y eliminar información de la tabla de Animal_Nutriente</p>
-          <a href="/animal_nutriente" class="btn btn-outline-primary">Ir a Animal_Nutriente</a>
+          <a href="/animal_nutriente" class="btn btn-secondary btn-outline-primary">Ir a Animal_Nutriente</a>
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
         <div class="card-body">
           <h4 class="card-title">Tabla Alimento</h4>
           <p class="card-text">Aquí podrás ver, añadir, editar y eliminar información de la tabla de alimento</p>
-          <a href="/alimento" class="btn btn-outline-secondary">Ir a Alimento</a>
+          <a href="/alimento" class="btn btn-secondary btn-outline-secondary">Ir a Alimento</a>
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
         <div class="card-body">
           <h4 class="card-title">Tabla Nutriente_Alimento</h4>
           <p class="card-text">Aquí podrás ver, añadir, editar y eliminar información de la tabla de Nutriente_Alimento</p>
-          <a href="/nutriente_alimento" class="btn btn-primary">Ir a Nutriente_Alimento</a>
+          <a href="/nutriente_alimento" class="btn btn-secondary btn-primary">Ir a Nutriente_Alimento</a>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
         <div class="card-body">
           <h4 class="card-title">Tabla Toma</h4>
           <p class="card-text">Aquí podrás ver, añadir, editar y eliminar información de la tabla de toma</p>
-          <a href="/toma" class="btn btn-outline-secondary">Ir a Toma</a>
+          <a href="/toma" class="btn btn-secondary btn-outline-secondary">Ir a Toma</a>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
         <div class="card-body">
           <h4 class="card-title">Tabla Dieta</h4>
           <p class="card-text">Aquí podrás ver, añadir, editar y eliminar información de la tabla de dieta</p>
-          <a href="/dieta" class="btn btn-primary">Ir a Dieta</a>
+          <a href="/dieta" class="btn btn-secondary btn-primary">Ir a Dieta</a>
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@
         <div class="card-body">
           <h4 class="card-title">Tabla Alimento_Dieta_Toma</h4>
           <p class="card-text">Aquí podrás ver, añadir, editar y eliminar información de la tabla de alimento_dieta_toma</p>
-          <a href="/alimento_dieta_toma" class="btn btn-outline-secondary">Ir a Alimento_Dieta_Toma</a>
+          <a href="/alimento_dieta_toma" class="btn btn-secondary btn-outline-secondary">Ir a Alimento_Dieta_Toma</a>
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
         <div class="card-body">
           <h4 class="card-title">Tabla Dieta_Animal_FechaInicio</h4>
           <p class="card-text">Aquí podrás ver, añadir, editar y eliminar información de la tabla de dieta_animal_fechaInicio.</p>
-          <a href="/dieta_animal_fechaInicio" class="btn btn-primary">Ir a Dieta_Animal_FechaInicio</a>
+          <a href="/dieta_animal_fechaInicio" class="btn btn-secondary btn-primary">Ir a Dieta_Animal_FechaInicio</a>
         </div>
       </div>
     </div>
