--- a/templates/reportes.html
+++ b/templates/reportes.html
@@ -10,7 +10,7 @@
         <div class="card-body">
           <h4 class="card-title">Animales que necesitan Riboflavina</h4>
           <p class="card-text">Generar reporte de todos los animales que necesitan de cierto nutriente y cantidad adecuada </p>
-          <a href="/reporte_1" class="btn btn-outline-primary">Ir a Animal</a>
+          <a href="/reporte_1" class="btn btn-secondary btn-outline-primary">Ir a Animal</a>
         </div>
       </div>
     </div>
@@ -20,7 +20,7 @@
         <div class="card-body">
           <h4 class="card-title">Vacas que pesan más de 550Kg</h4>
           <p class="card-text">Generar reporte de todos los animales que iniciaron cierta dieta en una fecha especifica con un peso especifico</p>
-          <a href="/reporte_2" class="btn btn-outline-secondary">Ir a Nutriente</a>
+          <a href="/reporte_2" class="btn btn-secondary btn-outline-secondary">Ir a Nutriente</a>
         </div>
       </div>
     </div>
@@ -30,7 +30,7 @@
         <div class="card-body">
           <h4 class="card-title">Obtener alimento mas barato con vitamina A</h4>
           <p class="card-text">Generar el reporte de cierto animal que no necesita de cierto alimento en su dieta</p>
-          <a href="/reporte_3" class="btn btn-outline-primary">Ir a Animal_Nutriente</a>
+          <a href="/reporte_3" class="btn btn-secondary btn-outline-primary">Ir a Animal_Nutriente</a>
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
         <div class="card-body">
           <h4 class="card-title">Caballos que no necesitan Avena</h4>
           <p class="card-text">Obtener el alimento más barato que puede tomar cierto animal que necesita cierto nutriente</p>
-          <a href="/reporte_4" class="btn btn-outline-secondary">Ir a Alimento</a>
+          <a href="/reporte_4" class="btn btn-secondary btn-outline-secondary">Ir a Alimento</a>
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
         <div class="card-body">
           <h4 class="card-title">Dieta iniciada en 1999</h4>
           <p class="card-text">Obtener todos los animales y su tipo que comenzaron su dieta en una fecha en especifico y cual es su dieta</p>
-          <a href="/reporte_5" class="btn btn-primary">Ir a Nutriente_Alimento</a>
+          <a href="/reporte_5" class="btn btn-secondary btn-primary">Ir a Nutriente_Alimento</a>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
         <div class="card-body">
           <h4 class="card-title">Alimentos con Calcio o Magnesio</h4>
           <p class="card-text">Obtener los alimentos que usan x*o* y nutriente</p>
-          <a href="/reporte_6" class="btn btn-outline-secondary">Ir a Toma</a>
+          <a href="/reporte_6" class="btn btn-secondary btn-outline-secondary">Ir a Toma</a>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
         <div class="card-body">
           <h4 class="card-title">Corderos nacidos en 1999</h4>
           <p class="card-text">Obtiene todos los corderos nacidos en 1999 que han iniciado una dieta especifica, después de una fecha especifica, después de una fecha especifica, cuyo peso se encuentre entre los 30 y 35Kg</p>
-          <a href="/reporte_7" class="btn btn-primary">Ir a Dieta</a>
+          <a href="/reporte_7" class="btn btn-secondary btn-primary">Ir a Dieta</a>
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@
         <div class="card-body">
           <h4 class="card-title">Peso medio de todas las vacas</h4>
           <p class="card-text">Obtiene el peso medio de todas las vacas</p>
-          <a href="/reporte_8" class="btn btn-outline-secondary">Ir a Alimento_Dieta_Toma</a>
+          <a href="/reporte_8" class="btn btn-secondary btn-outline-secondary">Ir a Alimento_Dieta_Toma</a>
         </div>
       </div>
     </div>
